--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: black;
+    margin: 2em;
+    border-color: white;
+}
+h1{
+    color: blue;
+
+}
